--- a/nathy 2B/index.html
+++ b/nathy 2B/index.html
@@ -9,5 +9,30 @@
 </head>
 <body>
    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura língua por um preço único.</h1> 
+   <section>
+    <div>
+        <img id="combo" src="./img/Combo.png" alt="Comboalura" height="125">
+    </div>
+
+        <div> 
+
+            <img id
+        </div>
+
+            <div> 
+
+
+            </div>
+
+            </section>
+
+    <section>
+
+        <div>
+
+        </div>
+
+    </section>
+
 </body>
 </html>
